--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
 
+            upload: '%kernel.project_dir%/public/upload/'
+
 services:
     # default configuration for services in *this* file
     _defaults:
